--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   }
 
   $(document).ready(function() {
-    updateFeed('caseyscarborough');
+    updateFeed('roachhd');
 
     $('#update').click(function() { updateFeed($("#username").val()); });
     $("#username").keypress(function(e) {
